crates/nyx-lexer/tests/snapshots/integration_tests__using__simple.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Using
- Std
- Colon
- Colon
- Ident: io
- Newline
- Using
- Core
- Colon
- Colon
- Ident: memory
- Newline
- Using
- Core
- Colon
- Colon
- Ident: iter
- Newline
