crates/nyx-lexer/tests/snapshots/integration_tests__using__with_visibility.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Public
- Using
- Ident: api
- Colon
- Colon
- Ident: types
- Newline
- Export
- Using
- Core
- Colon
- Colon
- Ident: primitives
- Newline
- Private
- Using
- Ident: internal
- Colon
- Colon
- Ident: helpers
- Newline
